--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         }
     },
     "require": {
-        "symfony/yaml": "^v3.3.8",
-        "phpunit/phpunit": "^6.0"
+        "symfony/yaml": "^4.0",
+        "phpunit/phpunit": "^7.0"
     },
     "scripts": {
         "test": "phpunit tests",
