--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
         }
     },
     "require": {
-        "symfony/yaml": "^4.0",
-        "phpunit/phpunit": "^8.0"
+        "php": ">=7.3",
+        "symfony/yaml": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "scripts": {
         "test": "phpunit tests",
